[gd_scene load_steps=4 format=3 uid="uid://cijjo3e8o8mai"]

[ext_resource type="PackedScene" path="res://addons/gut/gui/ShortcutButton.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/TestShortcuts.gd" id="2"]

[sub_resource type="Shortcut" id="2"]

[node name="TestShortcuts" type="Node2D"]
script = ExtResource("2")

[node name="ShortcutButton" parent="." instance=ExtResource("1")]
layout_mode = 3
offset_left = 255.331
offset_top = 57.7408
offset_right = 485.331
offset_bottom = 114.741

[node name="Button" type="Button" parent="."]
offset_left = 112.303
offset_top = 57.211
offset_right = 238.303
offset_bottom = 106.211
shortcut = SubResource("2")
text = "Hello World3D"

[connection signal="changed" from="ShortcutButton" to="." method="_on_ShortcutButton_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
